[FIX] Fix upload button text align

--- a/src/modules/upload/components/UploadButton/styles.module.scss
+++ b/src/modules/upload/components/UploadButton/styles.module.scss
@@ -42,7 +42,7 @@
     color: inherit;
     position: absolute;
     top: 50%;
-    right: 3.75rem;
+    right: 4rem;
     transform: translateY(-50%);
     white-space: nowrap;
     font-size: 1rem;
@@ -108,7 +108,7 @@
   }
 
   &[data-status='valid'] {
-    width: 160px;
+    width: 200px;
     height: 3.125rem;
     animation: valid-state 3000ms ease infinite;
     color: var(--color-white);
